--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello Cresfild!</p>
+    <a href="view/contacts">Contacts</a>
 </body>
 </html>
