--- a/index.html
+++ b/index.html
@@ -19,19 +19,15 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarMenu">
+                    <form class="form-inline ml-auto" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="navbar_search_form_input">
+                        </div>
+                        <button type="submit" class="btn btn-default">
+                            <i class="fas fa-search fa-2x" style="color:cornsilk"></i>
+                        </button>
+                    </form>
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Інфо</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Oleksii</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Інфо</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Oleksii</a>
-                        </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Інфо</a>
                         </li>
@@ -55,6 +51,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </body>
 
 </html>
