--- a/index.html
+++ b/index.html
@@ -12,29 +12,78 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+        <nav class="navbar navbar-expand-md sticky-top">
+            <!--Upper row-->
             <div class="container-fluid">
-                <a href="#" class="navbar-brand"><img src="img/logo.png" alt="logo" srcset=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu">
-                    <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarMenu">
+                    <!--<span class="navbar-toggler-icon"></span>-->
+                    <i class="fas fa-bars"></i>
                 </button>
+                <a href="#" class="navbar-brand"><img src="img/logo.png" alt="logo" srcset=""></a>
                 <div class="collapse navbar-collapse" id="navbarMenu">
                     <form class="form-inline ml-auto" role="search">
                         <div class="form-group">
                             <input type="text" class="form-control" id="navbar_search_form_input">
                         </div>
                         <button type="submit" class="btn btn-default">
-                            <i class="fas fa-search fa-2x" style="color:cornsilk"></i>
+                            <i class="fas fa-search"></i>
                         </button>
                     </form>
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Інфо</a>
+                            <a href="#" class="nav-link">
+                                <i class="far fa-folder-open"></i>
+                                Блог
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Oleksii</a>
+                            <a href="#" class="nav-link">
+                                <i class="fas fa-cog"></i>
+                                Сервіс
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="fas fa-phone"></i>
+                                Контакти
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="fas fa-home"></i>
+                                Про нас
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="fas fa-cube"></i>
+                                Доставка
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="fas fa-search"></i>
+                                Пошук
+                            </a>
                         </li>
                     </ul>
+                </div>
+                <div class="btn-group ml-auto" role="group">
+                    <button type="button" class="btn">
+                        <a href="#">
+                            <i class="fas fa-shopping-cart"></i>
+                        </a>
+                    </button>
+                    <button type="button" class="btn">
+                        <a href="#">
+                            <i class="fas fa-star"></i>
+                        </a>
+                    </button>
+                    <button type="button" class="btn">
+                        <a href="#">
+                            <i class="fas fa-sync-alt"></i>
+                        </a>
+                    </button>
                 </div>
             </div>
         </nav>
