--- a/index.html
+++ b/index.html
@@ -3,94 +3,48 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <!--<link rel="stylesheet" href="main.css">-->
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md sticky-top">
-            <!--Upper row-->
-            <div class="container-fluid">
-                <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarMenu">
-                    <!--<span class="navbar-toggler-icon"></span>-->
-                    <i class="fas fa-bars"></i>
-                </button>
-                <a href="#" class="navbar-brand"><img src="img/logo.png" alt="logo" srcset=""></a>
-                <div class="collapse navbar-collapse" id="navbarMenu">
-                    <form class="form-inline ml-auto" role="search">
-                        <div class="form-group">
-                            <input type="text" class="form-control" id="navbar_search_form_input">
-                        </div>
-                        <button type="submit" class="btn btn-default">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </form>
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="far fa-folder-open"></i>
-                                Блог
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="fas fa-cog"></i>
-                                Сервіс
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="fas fa-phone"></i>
-                                Контакти
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="fas fa-home"></i>
-                                Про нас
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="fas fa-cube"></i>
-                                Доставка
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">
-                                <i class="fas fa-search"></i>
-                                Пошук
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="btn-group ml-auto" role="group">
-                    <button type="button" class="btn">
-                        <a href="#">
-                            <i class="fas fa-shopping-cart"></i>
-                        </a>
-                    </button>
-                    <button type="button" class="btn">
-                        <a href="#">
-                            <i class="fas fa-star"></i>
-                        </a>
-                    </button>
-                    <button type="button" class="btn">
-                        <a href="#">
-                            <i class="fas fa-sync-alt"></i>
-                        </a>
-                    </button>
+    <div class="container-fluid">
+        <div class="card-deck mt-5">
+            <div class="card text-center">
+                <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Nick1</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">position1</h6>
+                    <a href="#" class="card-link">Telegram</a>
+                    <a href="#" class="card-link">Twitch</a>
                 </div>
             </div>
-        </nav>
-    </header>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <div class="card text-center">
+                <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Nick2</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">position2</h6>
+                    <a href="#" class="card-link">Telegram</a>
+                    <a href="#" class="card-link">Twitch</a>
+                </div>
+            </div>
+
+            <div class="card text-center">
+                <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Nick3</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">position3</h6>
+                    <a href="#" class="card-link">Telegram</a>
+                    <a href="#" class="card-link">Twitch</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -100,7 +54,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </body>
 
 </html>
