--- a/index.html
+++ b/index.html
@@ -7,44 +7,46 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="main.css">-->
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="card-deck mt-5">
-            <div class="card text-center">
+            <div class="card text-white bg-dark text-center">
                 <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Nick1</h5>
                     <h6 class="card-subtitle mb-2 text-muted">position1</h6>
-                    <a href="#" class="card-link">Telegram</a>
-                    <a href="#" class="card-link">Twitch</a>
+                    <a href="#" class="card-link"><i class="fab fa-telegram-plane fa-2x"></i></a>
+                    <a href="#" class="card-link"><i class="fab fa-twitch fa-2x"></i></a>
                 </div>
             </div>
 
-            <div class="card text-center">
+            <div class="card text-white bg-dark text-center">
                 <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Nick2</h5>
                     <h6 class="card-subtitle mb-2 text-muted">position2</h6>
-                    <a href="#" class="card-link">Telegram</a>
-                    <a href="#" class="card-link">Twitch</a>
+                    <a href="#" class="card-link"><i class="fab fa-telegram-plane fa-2x"></i></a>
+                    <a href="#" class="card-link"><i class="fab fa-twitch fa-2x"></i></a>
                 </div>
             </div>
 
-            <div class="card text-center">
+            <div class="card text-white bg-dark text-center">
                 <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Nick3</h5>
                     <h6 class="card-subtitle mb-2 text-muted">position3</h6>
-                    <a href="#" class="card-link">Telegram</a>
-                    <a href="#" class="card-link">Twitch</a>
+                    <a href="#" class="card-link"><i class="fab fa-telegram-plane fa-2x"></i></a>
+                    <a href="#" class="card-link"><i class="fab fa-twitch fa-2x"></i></a>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
