--- a/index.html
+++ b/index.html
@@ -9,39 +9,41 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="main.css">-->
+    <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
+<body class="bg-dark">
     <div class="container-fluid">
-        <div class="card-deck mt-5">
-            <div class="card text-white bg-dark text-center">
-                <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Nick1</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">position1</h6>
-                    <a href="#" class="card-link"><i class="fab fa-telegram-plane fa-2x"></i></a>
-                    <a href="#" class="card-link"><i class="fab fa-twitch fa-2x"></i></a>
+        <div class="container">
+            <div class="card-deck mt-5">
+                <div class="card text-white bg-dark text-center">
+                    <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Nick1</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">position1</h6>
+                        <a href="#" class="card-link"><i class="fab fa-telegram-plane fa-2x"></i></a>
+                        <a href="#" class="card-link"><i class="fab fa-twitch fa-2x"></i></a>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card text-white bg-dark text-center">
-                <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Nick2</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">position2</h6>
-                    <a href="#" class="card-link"><i class="fab fa-telegram-plane fa-2x"></i></a>
-                    <a href="#" class="card-link"><i class="fab fa-twitch fa-2x"></i></a>
+                <div class="card text-white bg-dark text-center">
+                    <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Nick2</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">position2</h6>
+                        <a href="#" class="card-link"><i class="fab fa-telegram-plane fa-2x"></i></a>
+                        <a href="#" class="card-link"><i class="fab fa-twitch fa-2x"></i></a>
+                    </div>
                 </div>
-            </div>
 
-            <div class="card text-white bg-dark text-center">
-                <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Nick3</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">position3</h6>
-                    <a href="#" class="card-link"><i class="fab fa-telegram-plane fa-2x"></i></a>
-                    <a href="#" class="card-link"><i class="fab fa-twitch fa-2x"></i></a>
+                <div class="card text-white bg-dark text-center">
+                    <img src="./avatar.png" class="card-img-top rounded-circle" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Nick3</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">position3</h6>
+                        <a href="#" class="card-link"><i class="fab fa-telegram-plane fa-2x"></i></a>
+                        <a href="#" class="card-link"><i class="fab fa-twitch fa-2x"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
