--- a/index.html
+++ b/index.html
@@ -15,32 +15,29 @@
 <body>
     <div class="container-fluid">
         <div class="row text-center text-light">
-            <div class="col-md-4 col-sm-4 col-xs-4 px-0">
+            <div class="col-lg-5 col-md-4 col-sm-4 col-xs-4 px-0">
                 <div class="col-md-12 h3 top_banner py-2 text-right pr-4 d-none d-sm-block">
                     PROFESSIONAL TOOLS</div>
             </div>
-            <div class="col px-0 text-center">
+            <div class="col-lg-2 col-md-4 col-sm-4 col px-0 text-center">
                 <img src="./img/Logo.png" class="img-fluid" alt="">
             </div>
-            <div class="col-md-4 col-sm-4 col-xs-4 px-0">
+            <div class="col-lg-5 col-md-4 col-sm-4 col-xs-4 px-0">
                 <div class="col-md-12 h3 top_banner pl-4 py-2 text-left d-none d-sm-block">PROFESSIONAL TOOLS</div>
                 <div class="col-md-12">
                     <nav class="navbar navbar-expand-lg py-0">
-                        <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="navbarToggler">
+                        <button class="navbar-toggler text-dark" type="button" data-toggle="collapse"
+                            data-target="navbarToggler">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarToggler">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item border-right border-left">
-                                    <a href="#" class="nav-link text-warning">О компании <i
-                                            class="fas fa-angle-double-right"></i></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link text-warning">Каталог товаров <i
+                                    <a href="#main_text" class="nav-link text-warning">Описание бренда<i
                                             class="fas fa-angle-double-right"></i></a>
                                 </li>
                                 <li class="nav-item border-right border-left">
-                                    <a href="#" class="nav-link text-warning">Контакты <i
+                                    <a href="#contacts" class="nav-link text-warning">Контакты <i
                                             class="fas fa-angle-double-right"></i></a>
                                 </li>
                             </ul>
@@ -52,23 +49,25 @@
     </div>
 
     <div class="row">
-        <div class="card border-0">
-            <img src="img/background_img.png" class="card-img" alt="">
-            <div class="card-img-overlay">
-                <p class="card-text">
-                    <div class="container">
-                        <div class="row text-center">
-                            <div class="col-md-12 col-sm-12 col-xs-12 pt-5 pb-4 border_bottom_2 display-4">
-                                ИНСТРУМЕНТ ДЛЯ ПРОФЕССИОНАЛОВ
+        <div class="col-lg-12">
+            <div class="card border-0">
+                <img src="img/background_img.png" class="card-img" alt="">
+                <div class="card-img-overlay">
+                    <p class="card-text">
+                        <div class="container">
+                            <div class="row text-center">
+                                <div class="col-md-12 col-sm-12 col-xs-12 pt-5 pb-4 border_bottom_2 display-4">
+                                    ИНСТРУМЕНТ ДЛЯ ПРОФЕССИОНАЛОВ
+                                </div>
+                            </div>
+                            <div class="col-md-12 col-sm-12 col-xs-12 ml-5">
+                                <a href="pdf/test.pdf"
+                                    class="btn border_2 btn-warning ml-5 mt-5 text-light shadow rounded font-weight-bold" target="_blank">КАТАЛОГ
+                                    ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-light"></i></a>
                             </div>
                         </div>
-                        <div class="col-md-12 col-sm-12 col-xs-12 ml-5">
-                            <a href="#"
-                                class="btn border_2 btn-warning ml-5 mt-5 text-light shadow rounded font-weight-bold">КАТАЛОГ
-                                ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-light"></i></a>
-                        </div>
-                    </div>
-                </p>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
@@ -82,54 +81,79 @@
     <div class="container-fluid" style="background-color:lightgray">
         <div class="container">
             <div class="row bg-light">
-                <div class="col-md-12 col-sm-12 col-xs-12">
-                    Text
+                <div class="col-md-12 col-sm-12 col-xs-12 px-4 py-4" id="main_text">
+                    Линия механического автослесарного инструмента была основана в 1978 году в Германии и с самого
+                    своего основания была ориентирована в первую очередь на профессионального потребителя. Наладив
+                    сбытовую сеть на внутреннем рынке, с середины 80-х годов, продукт начали продвигать в соседние
+                    европейские страны: Австрию, Италию и Голландию. В этих странах и сегодня имеется устойчивый спрос
+                    на качественную продукцию KING ROY. В конце 90-х годов производство было перенесено в Тайвань, где
+                    продукция KING ROY получила дополнительное конкурентное преимущество в виде низкой себестоимости,
+                    сумев при этом сохранить неизменно высокое качество.
+                    Инструмент, изготовленный из легированной хромованадиевой стали с термической обработкой, на самом
+                    современном оборудовании с использованием передовых достижений в металлообработке. Производство
+                    имеет сертификат ISO 9001:2000. Товары тайванского производителя, отвечают требованиям стандартов
+                    DIN, ANSI, полностью соответствуют требованиям ГОСТа. Одновременно на территории завода KING ROY
+                    была создана современная испытательная база. Она постоянно развивалась и в настоящее время
+                    используется для выборочного разрушающего контроля готовой продукции.
+                    Продукция маркируется зарегистрированным в большинстве стран мира логотипом. Не меньшее внимание
+                    уделяется внешнему виду инструмента. Торцевые головки производства KING ROY мгновенно распознаются
+                    не только по великолепной отделке, но и по характерным красным и синим полосам, обозначающим
+                    метрические и дюймовые размеры.
+                    Демократичная ценовая политика, высокая надёжность инструмента и широкий ассортимент моделей
+                    позволили серьёзно расширить круг потребителей. К сегодняшнему дню ореол продаж KING ROY
+                    распространяется не только на Европу, но и на Латинскую Америку, страны Азии и Ближнего Востока.
+                    Мы предлагаем вам качественный профессиональный инструмент по доступной не только специалистам цене.
+                    Мы гарантируем серьёзную программу поддержки бизнеса нашим партнерам и надёжную работу инструмента
+                    мастеру, который будет им пользоваться. Постоянно расширяя дилерскую сеть, мы наблюдаем, что
+                    инструмент востребован и нравится конечному потребителю. Мы постоянно совершенствуем нашу продукцию,
+                    развиваем новые направления инструментов, улучшая их качество и продлевая срок эксплуатации.
+                    Инструмент KING ROY – это не просто высококачественный и надёжный инструмент, это уникальные
+                    комплексные решения для ремонта и обслуживания автомобилей. Главный принцип нашей компании –
+                    профессиональный инструмент не должен быть роскошью.
+                    Сегодня пользователями инструмента KING ROY являются как предприятия автотехобслуживания, крупные
+                    машиностроительные производства, так и частные ценители качественного инструмента, на который
+                    распространяется понятия «ПОЖИЗНЕННАЯ ГАРАНТИЯ».
+                    «ПОЖИЗНЕННАЯ ГАРАНТИЯ» - это объявление неограниченного срока поддержания гарантийных обязательств,
+                    т. е. инструмент, вышедший из строя вследствие использования некачественных материалов или нарушения
+                    технологии в процессе его производства – подлежит замене. Другими словами, подлежит замене
+                    инструмент, имеющий дефект, обнаруженный или возникший в результате нарушений при производстве и
+                    делающий невозможным дальнейшее использование инструмента. Если инструмент вышел из строя по причине
+                    естественного износа, то это не свидетельствует непосредственно о качестве материала и не доказывает
+                    нарушения технологического процесса и гарантийным случаем не является.
+                    На инструмент, имеющий в своей конструкции кинематическую схему, в связи с сокращенным сроком
+                    эксплуатации, связанным с повышенным износом при использовании, распространяется понятие
+                    «ограниченной гарантии». Вставки-биты являются расходным материалом, гарантия на них не
+                    распространяется, как и на гибкие удлинители не способные, в силу своих конструкционных особенностей
+                    передавать большой крутящий момент.
+                    Приглашаем Вас ознакомиться с продукцией KING ROY, представленной в данном каталоге и будем рады
+                    видеть Вас в качестве наших партнеров для совместного продвижения инструмента KING ROY.
+
                 </div>
-                <!--<div class="col-md-12 col-sm-12 col-xs-12">
-                    <nav class="navbar navbar-expand-lg">
-                        <ul class="navbar-nav mx-auto">
-                            <li class="nav-item border-right border-left my-4 py-1 pl-2">
-                                <a href="#" class="nav-link text-secondary">О компании <i
-                                        class="fas fa-angle-double-right px-2"></i></a>
-                            </li>
-                            <li class="nav-item my-4 py-1 pl-2">
-                                <a href="#" class="nav-link text-secondary">Каталог товаров <i
-                                        class="fas fa-angle-double-right px-2"></i></a>
-                            </li>
-                            <li class="nav-item border-right border-left my-4 py-1 pl-2">
-                                <a href="#" class="nav-link text-secondary">Контакты <i
-                                        class="fas fa-angle-double-right px-2"></i></a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>-->
             </div>
         </div>
     </div>
 
     <div class="container-fluid" style="background-color:darkgrey">
         <div class="container">
-            <div class="row text-center pb-5">
-                <div class="col-md-12 col-sm-12 col-xs-12 pt-4">
-                    <a href="#"
-                        class="border-right border-secondary contact_links pr-md-4 pr-sm-2 text-dark font-weight-bold">info@kingroy.tw</a>
-                    <a href="#" class="px-md-4 px-sm-1 text-dark contact_links font-weight-bold">king_w@emirates.net.ae</a>
-                    <a href="#"
-                        class="pl-md-4 pl-sm-2 border-left border-secondary contact_links text-dark font-weight-bold">info.kingroy@gmail.com</a>
-                </div>
-                <div class="col-md-12 col-sm-12 col-xs-12 pt-4">
-                    <a href="#">
-                        <i class="fab fa-facebook-square fa-lg text-light px-1"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-viber fa-lg text-light px-1"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-twitter fa-lg text-light px-1"></i>
-                    </a>
-                    <a href="#">
-                        <i class="fab fa-instagram fa-lg text-light px-1"></i>
-                    </a>
+            <div class="row text-left pb-5">
+                <div class="col-md-12 col-sm-12 col-xs-12 pt-4" id="contacts">
+                    <p class="h4 text-light">
+                        По вопросам оптовых закупок:
+                        <ul>
+                            <li class="h5">
+                                Официальный представитель в Украине - info.kingroy@gmail.com
+                            </li>
+                            <li class="h5">
+                                Представительство в ОАЭ - king_w@emirates.net.ae
+                            </li>
+                            <li class="h5">
+                                Представительство в Тайвань - info@kingroy.tw
+                            </li>
+                        </ul>
+                    </p>
+                    <p class="h4">
+                        <a class="text-light" href="https://kingavto.com.ua/" target="_blank">Интернет-магазин</a>
+                    </p>
                 </div>
             </div>
         </div>
