Fix footer font-size

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12 ml-5">
                                 <a href="pdf/test.pdf"
-                                    class="btn border_2 btn-warning ml-5 mt-5 text-light shadow rounded font-weight-bold" target="_blank">КАТАЛОГ
+                                    class="btn border_2 btn-warning ml-5 mt-5 text-light shadow rounded font-weight-bold"
+                                    target="_blank">КАТАЛОГ
                                     ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-light"></i></a>
                             </div>
                         </div>
@@ -139,18 +140,18 @@
                 <div class="col-md-12 col-sm-12 col-xs-12 pt-4" id="contacts">
                     <p class="h3 text-light">
                         По вопросам оптовых закупок:
-                        <ul>
-                            <li class="h4">
-                                Официальный представитель в Украине - info.kingroy@gmail.com
-                            </li>
-                            <li class="h4">
-                                Представительство в ОАЭ - king_w@emirates.net.ae
-                            </li>
-                            <li class="h4">
-                                Представительство в Тайвань - info@kingroy.tw
-                            </li>
-                        </ul>
                     </p>
+                    <ul class="h4">
+                        <li>
+                            Официальный представитель в Украине - info.kingroy@gmail.com
+                        </li>
+                        <li>
+                            Представительство в ОАЭ - king_w@emirates.net.ae
+                        </li>
+                        <li>
+                            Представительство в Тайвань - info@kingroy.tw
+                        </li>
+                    </ul>
                     <p class="h3">
                         <a class="text-light" href="https://kingavto.com.ua/" target="_blank">Интернет-магазин</a>
                     </p>
