--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,6 +23,10 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a href="#main_text" class="nav-link pr-0 text-warning">Описание бренда<i
+                                class="fas fa-angle-double-right px-2"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="pdf/test.pdf" class="nav-link pr-0 text-warning" target="_blank">Каталог Инструментов<i
                                 class="fas fa-angle-double-right px-2"></i></a>
                     </li>
                     <li class="nav-item">
@@ -64,7 +68,7 @@
                                     ИНСТРУМЕНТ ДЛЯ ПРОФЕССИОНАЛОВ
                                 </div>
                             </div>
-                            <div class="col-md-12 col-sm-12 col-xs-12 ml-5">
+                            <div class="col-md-12 col-sm-12 col-xs-12 ml-5 d-none d-sm-block">
                                 <a href="pdf/test.pdf"
                                     class="btn border_2 btn-warning ml-md-5 mt-md-5 text-light shadow rounded font-weight-bold"
                                     target="_blank">КАТАЛОГ
