Add some updates

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#main_text" class="nav-link pr-0 text-warning">Описание бренда<i
+                        <a href="#main_description" class="nav-link pr-0 text-warning">Описание бренда<i
                                 class="fas fa-angle-double-right px-2"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="pdf/test.pdf" class="nav-link pr-0 text-warning" target="_blank">Каталог Инструментов<i
+                        <a href="pdf/test.pdf" class="nav-link pr-0 text-warning" target="_blank">Каталог инструментов<i
                                 class="fas fa-angle-double-right px-2"></i></a>
                     </li>
                     <li class="nav-item">
@@ -83,14 +83,14 @@
 
     <div class="row text-center">
         <div class="col border_top_5 h5 py-4 my-auto text-light" style="background-color:black">
-            <span class="text-warning">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД, ПРОИЗВЕДЕННЫЙ В ТАЙВАНЕ.
+            <span class="text-warning" id="main_description">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД, ПРОИЗВЕДЕННЫЙ В ТАЙВАНЕ.
         </div>
     </div>
 
     <div class="container-fluid" style="background-color:lightgray">
         <div class="container">
             <div class="row bg-light">
-                <div class="col-md-12 col-sm-12 col-xs-12 px-4 py-4" id="main_text">
+                <div class="col-md-12 col-sm-12 col-xs-12 px-4 py-4"  id="main_text">
                     Линия механического автослесарного инструмента была основана в 1978 году в Германии и с самого
                     своего основания была ориентирована в первую очередь на профессионального потребителя. Наладив
                     сбытовую сеть на внутреннем рынке, с середины 80-х годов, продукт начали продвигать в соседние
@@ -98,45 +98,44 @@
                     на качественную продукцию KING ROY. В конце 90-х годов производство было перенесено в Тайвань, где
                     продукция KING ROY получила дополнительное конкурентное преимущество в виде низкой себестоимости,
                     сумев при этом сохранить неизменно высокое качество.
-                    Инструмент, изготовленный из легированной хромованадиевой стали с термической обработкой, на самом
+                        Инструмент, изготовленный из легированной хромованадиевой стали с термической обработкой, на самом
                     современном оборудовании с использованием передовых достижений в металлообработке. Производство
                     имеет сертификат ISO 9001:2000. Товары тайванского производителя, отвечают требованиям стандартов
                     DIN, ANSI, полностью соответствуют требованиям ГОСТа. Одновременно на территории завода KING ROY
                     была создана современная испытательная база. Она постоянно развивалась и в настоящее время
                     используется для выборочного разрушающего контроля готовой продукции.
-                    Продукция маркируется зарегистрированным в большинстве стран мира логотипом. Не меньшее внимание
+                        Продукция маркируется зарегистрированным в большинстве стран мира логотипом. Не меньшее внимание
                     уделяется внешнему виду инструмента. Торцевые головки производства KING ROY мгновенно распознаются
                     не только по великолепной отделке, но и по характерным красным и синим полосам, обозначающим
                     метрические и дюймовые размеры.
-                    Демократичная ценовая политика, высокая надёжность инструмента и широкий ассортимент моделей
+                        Демократичная ценовая политика, высокая надёжность инструмента и широкий ассортимент моделей
                     позволили серьёзно расширить круг потребителей. К сегодняшнему дню ореол продаж KING ROY
                     распространяется не только на Европу, но и на Латинскую Америку, страны Азии и Ближнего Востока.
-                    Мы предлагаем вам качественный профессиональный инструмент по доступной не только специалистам цене.
+                        Мы предлагаем вам качественный профессиональный инструмент по доступной не только специалистам цене.
                     Мы гарантируем серьёзную программу поддержки бизнеса нашим партнерам и надёжную работу инструмента
                     мастеру, который будет им пользоваться. Постоянно расширяя дилерскую сеть, мы наблюдаем, что
                     инструмент востребован и нравится конечному потребителю. Мы постоянно совершенствуем нашу продукцию,
                     развиваем новые направления инструментов, улучшая их качество и продлевая срок эксплуатации.
-                    Инструмент KING ROY – это не просто высококачественный и надёжный инструмент, это уникальные
+                        Инструмент KING ROY – это не просто высококачественный и надёжный инструмент, это уникальные
                     комплексные решения для ремонта и обслуживания автомобилей. Главный принцип нашей компании –
                     профессиональный инструмент не должен быть роскошью.
-                    Сегодня пользователями инструмента KING ROY являются как предприятия автотехобслуживания, крупные
+                        Сегодня пользователями инструмента KING ROY являются как предприятия автотехобслуживания, крупные
                     машиностроительные производства, так и частные ценители качественного инструмента, на который
                     распространяется понятия «ПОЖИЗНЕННАЯ ГАРАНТИЯ».
-                    «ПОЖИЗНЕННАЯ ГАРАНТИЯ» - это объявление неограниченного срока поддержания гарантийных обязательств,
+                        «ПОЖИЗНЕННАЯ ГАРАНТИЯ» - это объявление неограниченного срока поддержания гарантийных обязательств,
                     т. е. инструмент, вышедший из строя вследствие использования некачественных материалов или нарушения
                     технологии в процессе его производства – подлежит замене. Другими словами, подлежит замене
                     инструмент, имеющий дефект, обнаруженный или возникший в результате нарушений при производстве и
                     делающий невозможным дальнейшее использование инструмента. Если инструмент вышел из строя по причине
                     естественного износа, то это не свидетельствует непосредственно о качестве материала и не доказывает
                     нарушения технологического процесса и гарантийным случаем не является.
-                    На инструмент, имеющий в своей конструкции кинематическую схему, в связи с сокращенным сроком
+                        На инструмент, имеющий в своей конструкции кинематическую схему, в связи с сокращенным сроком
                     эксплуатации, связанным с повышенным износом при использовании, распространяется понятие
                     «ограниченной гарантии». Вставки-биты являются расходным материалом, гарантия на них не
                     распространяется, как и на гибкие удлинители не способные, в силу своих конструкционных особенностей
                     передавать большой крутящий момент.
-                    Приглашаем Вас ознакомиться с продукцией KING ROY, представленной в данном каталоге и будем рады
+                        Приглашаем Вас ознакомиться с продукцией KING ROY, представленной в данном каталоге и будем рады
                     видеть Вас в качестве наших партнеров для совместного продвижения инструмента KING ROY.
-
                 </div>
             </div>
         </div>
