Update menu, header and footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top py-0">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,15 +22,15 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#main_description" class="nav-link pr-0 text-warning">Описание бренда<i
+                        <a href="#main_description" class="nav-link pr-0 text-warning font-weight-bold bg-light">Описание бренда<i
                                 class="fas fa-angle-double-right px-2"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="pdf/test.pdf" class="nav-link pr-0 text-warning" target="_blank">Каталог инструментов<i
+                        <a href="pdf/test.pdf" class="nav-link pr-0 text-warning font-weight-bold bg-light" target="_blank">Каталог инструментов<i
                                 class="fas fa-angle-double-right px-2"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contacts" class="nav-link pr-0 text-warning">Контакты<i
+                        <a href="#footer" class="nav-link pr-0 text-warning font-weight-bold bg-light">Контакты<i
                                 class="fas fa-angle-double-right px-2"></i></a>
                     </li>
                 </ul>
@@ -41,14 +41,14 @@
     <div class="container-fluid">
         <div class="row text-center text-light">
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 px-0">
-                <div class="col-md-12 h3 top_banner py-2 text-right pr-4 d-none d-sm-block">
+                <div class="col-md-12 h3 bg-dark py-2 text-right pr-4 d-none d-sm-block">
                     PROFESSIONAL TOOLS</div>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col px-0 text-center">
                 <img src="./img/Logo.png" class="img-fluid" alt="">
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 px-0">
-                <div class="col-md-12 h3 top_banner pl-4 py-2 text-left d-none d-sm-block">PROFESSIONAL TOOLS</div>
+                <div class="col-md-12 h3 bg-dark pl-4 py-2 text-left d-none d-sm-block">PROFESSIONAL TOOLS</div>
                 <!--<div class="col-md-12">
                     
                 </div>-->
@@ -82,7 +82,7 @@
     </div>
 
     <div class="row text-center">
-        <div class="col border_top_5 h5 py-4 my-auto text-light" style="background-color:black">
+        <div class="col border_top_5 h5 py-4 my-auto text-light bg-dark">
             <span class="text-warning" id="main_description">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД, ПРОИЗВЕДЕННЫЙ В ТАЙВАНЕ.
         </div>
     </div>
@@ -141,10 +141,11 @@
         </div>
     </div>
 
-    <div class="container-fluid" style="background-color:darkgrey">
+    <div class="row border_top_5 py-5 bg-dark" id="footer"></div>
+    <div class="container-fluid" style="background-color:darkgrey" >
         <div class="container">
-            <div class="row text-left pb-5">
-                <div class="col-md-12 col-sm-12 col-xs-12 pt-4" id="contacts">
+            <div class="row text-left pb-5" style="height: 525px">
+                <div class="col-md-12 col-sm-12 col-xs-12 pt-4 h-50">
                     <p class="h4 text-light">
                         По вопросам оптовых закупок:
                     </p>
