--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12 ml-5 d-none d-sm-block">
                                 <a href="pdf/test.pdf"
-                                    class="btn border_2 btn-warning ml-md-5 mt-md-5 text-light shadow rounded font-weight-bold"
+                                    class="btn border_2 btn-warning ml-md-5 mt-md-5 text-secondery shadow rounded font-weight-bold"
                                     target="_blank">КАТАЛОГ
-                                    ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-light"></i></a>
+                                    ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-dark"></i></a>
                             </div>
                         </div>
                     </p>
