--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a href="#main_description" class="nav-link pr-0 text-warning font-weight-bold bg-dark">Описание бренда<i
-                                class="fas fa-angle-double-right px-2"></i></a>
+                                class="fas fa-angle-double-right px-2 text-warning"></i></a>
                     </li>
                     <li class="nav-item">
                         <a href="pdf/test.pdf" class="nav-link pr-0 text-warning font-weight-bold bg-dark" target="_blank">Каталог инструментов<i
-                                class="fas fa-angle-double-right px-2"></i></a>
+                                class="fas fa-angle-double-right px-2 text-warning"></i></a>
                     </li>
                     <li class="nav-item">
                         <a href="#footer" class="nav-link pr-0 text-warning font-weight-bold bg-dark">Контакты<i
-                                class="fas fa-angle-double-right px-2"></i></a>
+                                class="fas fa-angle-double-right px-2 text-warning"></i></a>
                     </li>
                 </ul>
             </div>
