--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top py-0 px-0" id="navbar">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark sticky-top py-0 px-0">
+        <div class="container-fluid" id="header">
             <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarToggler"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -204,7 +204,7 @@
                 </div>
             </div>
             <div class="col text-right">
-                <a class="text-warning" href="#navbar"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
+                <a class="text-warning" href="#header"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
             </div>
         </div>
     </div>
