Fix shop button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="pdf/test.pdf" class="nav-link pr-0 text-warning font-weight-bold bg-dark"
-                            target="_blank">Каталог инструментов<i
+                            target="_blank" id="catalog_btn">Каталог инструментов<i
                                 class="fas fa-angle-double-right px-2 text-warning"></i></a>
                     </li>
                     <li class="nav-item">
