Add some updates

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
     <div class="container-fluid">
         <div class="row text-center text-light">
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 px-0">
-                <div class="col-md-12 h3 bg-secondary py-2 text-right pr-4 d-none d-sm-block">
+                <div class="col-md-12 h3 bg-secondary py-2 text-right pr-4 d-none d-sm-block" id="header_left_text">
                     PROFESSIONAL TOOLS</div>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col px-0 text-center">
                 <img src="./img/Logo.png" class="img-fluid" alt="">
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 px-0">
-                <div class="col-md-12 h3 bg-secondary pl-4 py-2 text-left d-none d-sm-block">PROFESSIONAL TOOLS</div>
+                <div class="col-md-12 h3 bg-secondary pl-4 py-2 text-left d-none d-sm-block" id="header_right_text">PROFESSIONAL TOOLS</div>
             </div>
         </div>
     </div>
@@ -72,7 +72,7 @@
                             <div class="col-md-12 col-sm-12 col-xs-12 ml-5 d-none d-md-block d-xl-block">
                                 <a href="pdf/test.pdf"
                                     class="btn btn-warning ml-md-5 mt-md-5 text-secondery shadow rounded font-weight-bold"
-                                    target="_blank">КАТАЛОГ
+                                    target="_blank" id="catalog_btn">КАТАЛОГ
                                     ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-dark"></i></a>
                             </div>
                         </div>
@@ -83,7 +83,7 @@
     </div>
 
     <div class="row text-center">
-        <div class="col border_top_5 h5 py-4 my-auto text-light" style="background-color:black">
+        <div class="col border_top_5 h5 py-4 my-auto text-light" style="background-color:black" id="middle_banner_text">
             <span class="text-warning" id="main_description">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД, ПРОИЗВЕДЕННЫЙ В
             ТАЙВАНЕ.
         </div>
@@ -203,7 +203,7 @@
                     </table>
                 </div>
             </div>
-            <div class="col text-right">
+            <div class="col text-right fixed-bottom pb-3 pr-4">
                 <a class="text-warning" href="#header"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
             </div>
         </div>
